# autotools-template

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac
src/: Makefile.am  add.c  add.h  common.c  common.h  main.c
tests/: add.c  minunit.h  test.c
